# ci-exercise-rp7916

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  online_doc.yml
docs/: conf.py  index.md
docs/_build/doctrees/: api.doctree  changelog.doctree  environment.pickle  index.doctree  installing.doctree
docs/_build/markdown/: api.md  index.md  installing.md
src/unc/: __init__.py
tests/: test_labunc.py  test_stdunc.py
